# orchestr8

./: .gitignore  README.md  cli.py  client.py  database_handler.py  facade.py  globals.py  orchestrate.db  pyproject.toml  requirements.txt  server.py  websocket_handler.py
database/: config.json  db.py  repository.py
database/models/: flow.py  flow_runs.py
logger/: log.py  wrapper.py
routes/: flow_run.py  index.py  server.py  websocket.py
src/orchestrate/: __init__.py  cli.py  data_store.py  database_handler.py  facade.py  flow.py  start_server.py  task.py
src/orchestrate/database/: repository.py
src/orchestrate/logger/: log.py
src/orchestrate/routes/: connection_manager.py  websocket.py
src/orchestrate/server/: main.py
src/orchestrate/server/database/: repository.py
src/orchestrate/server/database/models/: flow.py
src/orchestrate/server/routes/: flow_run.py  index.py
src/orchestrate/server/templates/: flow-runs.html  flow_details.html  index.html  status.html
src/orchestrate/templates/: flow-run.html  flow-runs.html  flow_details.html  index.html  layout.html  status.html
templates/: flow-run.html  flow-runs-bar-graph.html  flow_details.html  flows.html  index.html  layout.html
