[project]
name = "orchestrate"
version = "0.0.1"
authors = [
  { name="Roshan Manjushree Adhikari", email="manjushreeeroshan@gmail.com" },
]
description = "Orchestrate is a framework to maintain data workflows, orchestrate flows, keep track of flow history in Python."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/manjushree2012/orchestr8"
Issues = "https://github.com/manjushree2012/orchestr8/issues"

[project.scripts]
orchestrate = "cli:cli"